[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
description = "A game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0", features = ["ttf"] }
tokio = { version = "1", features = ["full"] }
rand = "0"
chrono = "0"

[package.metadata.bundle]
name = "Tetris"
identifier = "niuhuan.tetris"
icon = ["128x128.jpg"]
version = "1.0.0"
resources = ["font.ttf"]
copyright = "Copyright (c) niuhuan 2022. All rights reserved."
category = "Game"
short_description = "Tetris"
long_description = """
Tetris game.
"""
